Gradient descent convergence proof

--- a/lab.ipynb
+++ b/lab.ipynb
@@ -1215,6 +1215,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Proof of convergence of Gradient Descent Algorithm.\n",
+    "\n",
+    "The function $f$ is $L$ -smooth and $\\mu$ -strongly convex. From a given $x_{0} \\in \\mathbb{R}^{d}$ and $\\frac{1}{L} \\geq \\gamma>0$ we have that the iterates\n",
+    "\\begin{equation}\n",
+    "x^{t+1} = x^{t}-\\gamma \\nabla f\\left(x^{t}\\right)\n",
+    "\\end{equation}\n",
+    "converge according to\n",
+    "\\begin{equation}\n",
+    "\\left\\|x^{t+1}-x^{*}\\right\\|_{2}^{2} \\leq(1-\\gamma \\mu)^{t+1}\\left\\| x^{0}-x^{*} \\right\\|_{2}^{2}\n",
+    "\\end{equation}\n",
+    "In particular, or\n",
+    "$\\gamma=\\frac{1}{L}$ the iterates enjoy a linear convergence with a rate of $\\mu / L$. \n",
+    "\n",
+    "\n",
+    "Proof: Starting from the definition of the algorithm we have that\n",
+    "\\begin{aligned}\n",
+    "\\left\\|x^{t+1}-x^{*}\\right\\|_{2}^{2} &=\\left\\|x^{t}-x^{*}-\\gamma \\nabla f\\left(x^{t}\\right)\\right\\|_{2}^{2} \\\\\n",
+    "&=\\left\\|x^{t}-x^{*}\\right\\|_{2}^{2}-2 \\gamma\\left\\langle\\nabla f\\left(x^{t}\\right), x^{t}-x^{*}\\right\\rangle+\\gamma^{2}\\left\\|\\nabla f\\left(x^{t}\\right)\\right\\|_{2}^{2} \\\\\n",
+    "& \\leq(1-\\gamma \\mu)\\left\\|x^{t}-x^{*}\\right\\|_{2}^{2}-2 \\gamma\\left(f\\left(x^{t}\\right)-f\\left(x^{*}\\right)\\right)+\\gamma^{2}\\left\\|\\nabla f\\left(x^{t}\\right)\\right\\|_{2}^{2} \\\\\n",
+    "& \\leq(1-\\gamma \\mu)\\left\\|x^{t}-x^{*}\\right\\|_{2}^{2}-2 \\gamma\\left(f\\left(x^{t}\\right)-f\\left(x^{*}\\right)\\right)+2 \\gamma^{2} L\\left(f\\left(x^{t}\\right)-f\\left(x^{*}\\right)\\right.\\\\\n",
+    "&=(1-\\gamma \\mu)\\left\\|x^{t}-x^{*}\\right\\|_{2}^{2}-2 \\gamma(1-\\gamma L)\\left(f\\left(x^{t}\\right)-f\\left(x^{*}\\right)\\right)\n",
+    "\\end{aligned}\n",
+    "\n",
+    "For the first inequality we used the definition of $\\mu$-strong convexity, and for the second we used a result from the fact that $f$ is $L$-smooth.\n",
+    "\n",
+    "\n",
+    "Since $\\frac{1}{L} \\geq \\gamma$ we have that $-2 \\gamma(1-\\gamma L)$ is negative, and can therefore be removed to give\n",
+    "\\begin{equation}\n",
+    "\\left\\|x^{t+1}-x^{*}\\right\\|_{2}^{2} \\leq(1-\\gamma \\mu)\\left\\|x^{t}-x^{*}\\right\\|_{2}^{2}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Keyword ideas**: standard or stochastic Newton method, ADMM, continuation methods, tests on large scale datasets, intuition behind variance reduction, catalyst..."
    ]
   }
@@ -1235,7 +1271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
