--- a/lab.ipynb
+++ b/lab.ipynb
@@ -1215,7 +1215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Proof of convergence of Gradient Descent Algorithm.\n",
+    "**Proof of convergence of Gradient Descent Algorithm.**\n",
     "\n",
     "The function $f$ is $L$ -smooth and $\\mu$ -strongly convex. From a given $x_{0} \\in \\mathbb{R}^{d}$ and $\\frac{1}{L} \\geq \\gamma>0$ we have that the iterates\n",
     "\\begin{equation}\n",
@@ -1245,6 +1245,71 @@
     "\\begin{equation}\n",
     "\\left\\|x^{t+1}-x^{*}\\right\\|_{2}^{2} \\leq(1-\\gamma \\mu)\\left\\|x^{t}-x^{*}\\right\\|_{2}^{2}\n",
     "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Proof of convergence of Stochastic Gradient Descent**\n",
+    "\n",
+    "We call the stochastic gradient $g_k$, which is used in the update rule for the SGD algorithm.\n",
+    "We have that $f(x)$ is $\\mu$-strongly convex, and assume that $\\mathbb{E}\\left(\\left\\|g_{k}\\right\\|^{2}\\right) \\leq G^{2}$.\n",
+    "Thus there is a $\\mu > 0$ such that\n",
+    "\\begin{equation}\n",
+    "f(x)-f(y) \\geq\\langle\\nabla f(y), x-y\\rangle+\\frac{l}{2}\\|x-y\\|^{2}\n",
+    "\\end{equation}\n",
+    "For the steplength $\\gamma_{k}=\\frac{1}{l k}$ we have\n",
+    "\\begin{equation}\n",
+    "\\mathbb{E}\\left(\\left\\|x_{k}-x^{*}\\right\\|^{2}\\right) \\leq \\frac{\\max \\left\\{\\left\\|x_{1}-x^{*}\\right\\|^{2}, G^{2} / l^{2}\\right\\}}{k}\n",
+    "\\end{equation}\n",
+    "where $x^{*}$ is the optimal solution to the minimization problem.\n",
+    "\n",
+    "\n",
+    "Proof: From the strong convexity, we have\n",
+    "\n",
+    "\\begin{array}{l}\n",
+    "{f\\left(x^{*}\\right)-f\\left(x_{k}\\right) \\geq\\left\\langle\\nabla f\\left(x_{k}\\right), x^{*}-x_{k}\\right\\rangle+\\frac{l}{2}\\left\\|x_{k}-x^{*}\\right\\|^{2}} \\\\\n",
+    "{f\\left(x_{k}\\right)-f\\left(x^{*}\\right) \\geq\\left\\langle\\nabla f\\left(x^{*}\\right), x_{k}-x^{*}\\right\\rangle+\\frac{l}{2}\\left\\|x_{k}-x^{*}\\right\\|^{2}}\n",
+    "\\end{array}\n",
+    "\n",
+    "\n",
+    "By summarizing the inequalities we get\n",
+    "\\begin{equation}\n",
+    "\\left\\langle\\nabla f\\left(x_{k}\\right)-\\nabla f\\left(x^{*}\\right), x_{k}-x^{*}\\right\\rangle=\\left\\langle\\nabla f\\left(x_{k}\\right), x_{k}-x^{*}\\right\\rangle \\geq l\\left\\|x_{k}-x^{*}\\right\\|^{2}\n",
+    "\\end{equation}\n",
+    "\n",
+    "We have\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "\\mathbb{E}\\left(\\left\\|x_{k+1}-x^{*}\\right\\|^{2}\\right) &=\\mathbb{E}\\left(\\left\\|x_{k}-\\gamma_{k} g_{k}-x^{*}\\right\\|^{2}\\right) \\\\\n",
+    "&=\\mathbb{E}\\left(\\left\\|x_{k}-x^{*}\\right\\|^{2}\\right)-2 \\gamma_{k} \\mathbb{E}\\left\\langle g_{k}, x_{k}-x^{*}\\right\\rangle+\\gamma_{k}^{2} \\mathbb{E}\\left(\\left\\|g_{k}\\right\\|^{2}\\right) \\\\\n",
+    "& \\leq \\mathbb{E}\\left(\\left\\|x_{k}-x^{*}\\right\\|^{2}\\right)-2 \\gamma_{k} \\mathbb{E}\\left\\langle\\nabla f\\left(x_{k}\\right), x_{k}-x^{*}\\right\\rangle+\\gamma_{k}^{2} G^{2}\n",
+    "\\end{aligned}\n",
+    "\n",
+    "\n",
+    "By applying the summarized inequalities above we get\n",
+    "\\begin{equation}\n",
+    "\\mathbb{E}\\left(\\left\\|x_{k+1}-x^{*}\\right\\|^{2}\\right) \\leq \\mathbb{E}\\left(\\left\\|x_{k}-x^{*}\\right\\|^{2}\\right)-2 l \\gamma_{k} \\mathbb{E}\\left(\\left\\|x_{k}-x^{*}\\right\\|^{2}\\right)+\\gamma_{k}^{2} G^{2} \\\\\n",
+    "=\\left(1-2 l \\gamma_{k}\\right) \\mathbb{E}\\left(\\left\\|x_{k}-x^{*}\\right\\|^{2}\\right)+\\gamma_{k}^{2} G^{2}\n",
+    "\\end{equation}\n",
+    "\n",
+    "We prove the convergence rate by induction. First we note that\n",
+    "\\begin{equation}\n",
+    "\\left\\|x_{1}-x^{*}\\right\\|^{2} \\leq \\frac{\\max \\left\\{\\left\\|x_{1}-x^{*}\\right\\|^{2}, G^{2} / l^{2}\\right\\}}{1}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Then we assume that the convergence rate holds with $k .$ Next we only need to show that it holds with $k+1 .$ Denote $L=\\max \\left\\|x_{1}-x^{*}\\right\\|^{2}, G^{2} / l^{2} .$ From the result above we have\n",
+    "\\[\n",
+    "\\begin{aligned}\n",
+    "\\mathbb{E}\\left(\\left\\|x_{k+1}-x^{*}\\right\\|^{2}\\right) & \\leq\\left(1-\\frac{2}{k}\\right) \\mathbb{E}\\left(\\left\\|x_{k}-x^{*}\\right\\|^{2}\\right)+\\frac{1}{l^{2} k^{2}} G^{2} \\\\\n",
+    "& \\leq\\left(1-\\frac{2}{k}\\right) \\frac{L}{k}+\\frac{1}{l^{2} k^{2}} G^{2} \\\\\n",
+    "& \\leq\\left(\\frac{1}{k}-\\frac{2}{k^{2}}\\right) L+\\frac{L}{k^{2}} \\\\\n",
+    "& \\leq\\left(\\frac{1}{k}-\\frac{1}{k^{2}}\\right) L \\\\\n",
+    "& \\leq \\frac{L}{k+1}\n",
+    "\\end{aligned}\n",
+    "\\]\n",
+    "Thus the convergence is proved."
    ]
   },
   {
