changes to proof on sgd

--- a/lab.ipynb
+++ b/lab.ipynb
@@ -1259,7 +1259,7 @@
     "\\begin{equation}\n",
     "f(x)-f(y) \\geq\\langle\\nabla f(y), x-y\\rangle+\\frac{l}{2}\\|x-y\\|^{2}\n",
     "\\end{equation}\n",
-    "For the steplength $\\gamma_{k}=\\frac{1}{l k}$ we have\n",
+    "For the steplength $\\gamma_{k}=\\frac{1}{l k}$ (which corresponds to the one used in the implementation) we have\n",
     "\\begin{equation}\n",
     "\\mathbb{E}\\left(\\left\\|x_{k}-x^{*}\\right\\|^{2}\\right) \\leq \\frac{\\max \\left\\{\\left\\|x_{1}-x^{*}\\right\\|^{2}, G^{2} / l^{2}\\right\\}}{k}\n",
     "\\end{equation}\n",
