--- a/lab.ipynb
+++ b/lab.ipynb
@@ -1308,7 +1308,7 @@
     "& \\leq\\left(\\frac{1}{k}-\\frac{1}{k^{2}}\\right) L \\\\\n",
     "& \\leq \\frac{L}{k+1}\n",
     "\\end{aligned}\n",
-    "\\]\n",
+    "\n",
     "Thus the convergence is proved."
    ]
   },
@@ -1321,10 +1321,10 @@
     "The proximal operator\n",
     "$ prox_{\\gamma}^h(y) = argmin(h(x)+\\frac{1}{2\\gamma}|x-y|^2) $\n",
     "and stepsize of $ \\gamma = \\frac{1}{2(\\mu n + L)} $ lead to\n",
-    "$$ E|x^k - x^{*}|^2 \\leq (1 - \\frac{\\mu}{2(\\mu n + L)})^k ( |x^{*} - x^0|^2 + \\frac{n}{\\mu n + L} \\langle f(x^0) - (f'(x^*), x^0 - x^*) - f(x^*)\\rangle $$\n",
+    "$$ E|x^k - x^{*}|^2 \\leq (1 - \\frac{\\mu}{2(\\mu n + L)})^k ( |x^{*} - x^0|^2 + \\frac{n}{\\mu n + L} [f(x^0) - \\langle f'(x^*), x^0 - x^* \\rangle - f(x^*)] $$\n",
     "using $ \\gamma = \\frac{1}{3L} $ we have:\n",
-    "$$ E(F(x^k)) - F(x^*) \\leq \\frac{4n}{k} [\\frac{2L}{n}|x^0 - x^*|^2 + f(x^0) - (f'(x^*), x^0 - x^*) - f(x^*) ] $$\n",
-    "$$ E(|x^k - x^*|^2) \\leq (1 - min(\\frac{1}{4n}, \\frac{\\mu}{3L}))^k [ |x^0 - x^*|^2 + \\frac{2n}{3L} \\langle f(x^0) - (f'(x^*), x^0 - x^*) - f(x^*) \\rangle ]      $$\n",
+    "$$ E(F(x^k)) - F(x^*) \\leq \\frac{4n}{k} [\\frac{2L}{n}|x^0 - x^*|^2 + f(x^0) - \\langle f'(x^*), x^0 - x^* \\rangle - f(x^*) ] $$\n",
+    "$$ E(|x^k - x^*|^2) \\leq (1 - min(\\frac{1}{4n}, \\frac{\\mu}{3L}))^k [ |x^0 - x^*|^2 + \\frac{2n}{3L} [ f(x^0) - \\langle f'(x^*), x^0 - x^* \\rangle - f(x^*) ] ]      $$\n",
     "\n",
     "Since $ (1 - min(\\frac{1}{4n}, \\frac{\\mu}{3L}))^k $ goes to 0 and  $ |x^0 - x^*|^2 + \\frac{2n}{3L} [f(x^0) - (f'(x^*), x^0 - x^*) - f(x^*) $ is bounded $ x^k -> x^* $ that proves convergence"
    ]
