--- a/lab.ipynb
+++ b/lab.ipynb
@@ -264,6 +264,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Quesiton 1\n",
+    "> **Answer:**\n",
+    "So $f_i$ is definet as $f_i := log(1 + exp(-b_i \\langle a_i, x\\rangle>)) + \\frac{l_2}{2} \\|x\\|_2^2$ from here its obvious that the gradient of this function is given by:\n",
+    "\n",
+    "$$\\nabla f_i = \\frac{-b_i a_i }{1 + e^{b_i \\langle a_i,x \\rangle}} + l_2 x$$\n",
+    "\n",
+    ">Since $b_i^2 = 1$, for the Hessian we get:\n",
+    "$$ \\Delta f_i = \\frac{b_i^2 a_i a_i^T e^{b_i \\langle a_i, x \\rangle}}{\\left(1 + e^{b_i \\langle a_i, x \\rangle}\\right)^2} + l_2 I  = \\frac{a_i a_i^T e^{b_i \\langle a_i, x \\rangle}}{\\left(1 + e^{b_i \\langle a_i, x \\rangle}\\right)^2} + l_2 I \\leq \\frac{a_i a_i^T}{4} + l_2 I$$ \n",
+    "The last equality is reasoned like follows:\n",
+    "Since $b_i \\langle a_i , x_i\\rangle$ is always positive (from the definiton) we have that $e^{b_i \\langle a_i, x \\rangle} \\geq 1 $ Hence since function $x^2$ is an increasing funtion on $[0, +\\infty]$ we have that $\\left(1 + e^{b_i \\langle a_i ,x \\rangle} \\right)^2 \\geq 4$ so finally $\\frac{ e^{b_i \\langle a_i, x \\rangle}}{\\left(1 + e^{b_i \\langle a_i, x \\rangle}\\right)^2} \\leq \\frac{1}{4}$\n",
+    "\n",
+    ">We come back again to the inequality:\n",
+    "$$\\nabla f_i = \\frac{-b_i a_i }{1 + e^{b_i \\langle a_i,x \\rangle}} + l_2 x$$\n",
+    "By multiplyin by left(right) with $x^T$($x$) where $x \\in \\mathrm{R}^n$ we get an equivalent inequality:\n",
+    "$$x^T\\nabla f_i x = x^T \\left(\\frac{-b_i a_i }{1 + e^{b_i \\langle a_i,x \\rangle}} + l_2 x\\right) x$$\n",
+    "Which is equivalent to:\n",
+    "> $$\\lambda_{\\max}(\\nabla^2 f_i) \\le \\lambda_{\\max}(\\frac{a_i a_i^T}{4} + l_2 I_d)$$\n",
+    "\n",
+    "#### Question 2\n",
     "> **Answer:**\n",
     ">\n",
     ">Let $M = a_i a_i^T$ we would like to find the eigen values of $M$. From the definition of the eigen velue of a matrix we have that for a vector $u$ there exists a $\\lambda$ for which we have $Mu = \\lambda u$ \n",
@@ -1376,7 +1395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
