--- a/lab.ipynb
+++ b/lab.ipynb
@@ -1356,6 +1356,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Proof of convergence of SVRG**\n",
+    "\n",
+    "By setting $\\tilde{\\mu}$ as the average gradient, the following update rule is obtained:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "w^{(t)} &=w^{(t-1)}-\\gamma_{t}\\left(\\nabla f_{i}\\left(w^{(t-1)}\\right)-\\nabla f_{i_{t}}(\\tilde{w})+\\tilde{\\mu}\\right),\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "where $\\tilde{w}$ is the estimated $w$ saved at each step.\n",
+    "\n",
+    "We thus have\n",
+    "\\begin{equation}\n",
+    "\\mathbb{E}\\left[w^{(t)} | w^{(t-1)}\\right]=w^{(t-1)}-\\gamma_{t} \\nabla P\\left(w^{(t-1)}\\right)\n",
+    "\\end{equation}\n",
+    "where $P$ corresponds to the minimization problem.\n",
+    "\n",
+    "\n",
+    "The update rule may also be defined using the function\n",
+    "\\begin{equation}\n",
+    "\\tilde{f}_{i}(w)=f_{i}(w)-\\left(\\nabla f_{i}(\\tilde{w})-\\tilde{\\mu}\\right)^{\\top} w.\n",
+    "\\end{equation}\n",
+    "\n",
+    "Since $\\sum_{i=1}^{n}\\left(\\nabla f_{i}(\\tilde{w})-\\tilde{\\mu}\\right)=0,$ we know that\n",
+    "\\begin{equation}\n",
+    "P(w)=\\frac{1}{n} \\sum_{i=1}^{n} f_{i}(w)=\\frac{1}{n} \\sum_{i=1}^{n} \\tilde{f}_{i}(w)\n",
+    "\\end{equation}\n",
+    "\n",
+    "Now, by applying the standard SGD to\n",
+    "$P(w)=\\frac{1}{n} \\sum_{i=1}^{n} \\tilde{f}_{i}(w)$ we obtain the first update rule.\n",
+    "We note that when both $\\tilde{w}$ and $w^{(t)}$ converge\n",
+    "to the same parameter $w_{*},$ then $\\tilde{\\mu} \\rightarrow 0 .$ Thus if $\\nabla f_{i}(\\tilde{w}) \\rightarrow \\nabla f_{i}\\left(w_{*}\\right),$ then\n",
+    "\\begin{equation}\n",
+    "\\nabla f_{i}\\left(w^{(t-1)}\\right)-\\nabla f_{i}(\\tilde{w})+\\tilde{\\mu} \\rightarrow \\nabla f_{i}\\left(w^{(t-1)}\\right)-\\nabla f_{i}\\left(w_{*}\\right) \\rightarrow 0\n",
+    "\\end{equation}\n",
+    "This ensures the convergence of the algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Keyword ideas**: standard or stochastic Newton method, ADMM, continuation methods, tests on large scale datasets, intuition behind variance reduction, catalyst..."
    ]
   }
