SAGA proof version 2

--- a/lab.ipynb
+++ b/lab.ipynb
@@ -266,7 +266,7 @@
    "source": [
     "#### Quesiton 1\n",
     "> **Answer:**\n",
-    "So $f_i$ is definet as $f_i := log(1 + exp(-b_i \\langle a_i, x\\rangle>)) + \\frac{l_2}{2} \\|x\\|_2^2$ from here its obvious that the gradient of this function is given by:\n",
+    "So $f_i$ is defined as $f_i := log(1 + exp(-b_i \\langle a_i, x\\rangle>)) + \\frac{l_2}{2} \\|x\\|_2^2$ from here its obvious that the gradient of this function is given by:\n",
     "\n",
     "$$\\nabla f_i = \\frac{-b_i a_i }{1 + e^{b_i \\langle a_i,x \\rangle}} + l_2 x$$\n",
     "\n",
@@ -285,12 +285,12 @@
     "#### Question 2\n",
     "> **Answer:**\n",
     ">\n",
-    ">Let $M = a_i a_i^T$ we would like to find the eigen values of $M$. From the definition of the eigen velue of a matrix we have that for a vector $u$ there exists a $\\lambda$ for which we have $Mu = \\lambda u$ \n",
+    ">Let $M = a_i a_i^T$ we would like to find the eigenvalues of $M$. From the definition of the eigenvalue of a matrix we have that for a vector $u$ there exists a $\\lambda$ for which we have $Mu = \\lambda u$ \n",
     "$\\rightarrow a_i a_i^T u = \\lambda u$ \n",
-    "$\\rightarrow a_i^T(a_i a_i^T)u = a_i^T\\lambda u$ By using the asociative property we have that\n",
+    "$\\rightarrow a_i^T(a_i a_i^T)u = a_i^T\\lambda u$ By using the associative property we have that\n",
     "$\\rightarrow a_i^Ta_i(a_i^T u) = \\lambda a_i^T u$ \n",
-    "$\\rightarrow (\\|a_i\\|_2^2 - \\lambda)a_i^T u = 0$. From here we have that $\\lambda = \\|a_i\\|_2^2$ is an eigen value of the matrix $M$. We have to show that all other eigen values are zero. Supose that $a$ is the eigen vector corresponding to the founded eigen value. Then for every other eigen vector $b$ we have that $a^T b = 0$.\n",
-    "Which gives us: $Mb = a a^T b = 0$ for every other eigen vector its corresponded eigen value is zeros hence we have that $\\|a_i\\|_2^2$ is the maximal value of the matrix $M = a_i a_i^T$.Which proves part 2"
+    "$\\rightarrow (\\|a_i\\|_2^2 - \\lambda)a_i^T u = 0$. From here we have that $\\lambda = \\|a_i\\|_2^2$ is an eigenvalue of the matrix $M$. We have to show that all other eigenvalues are zero. Supose that $a$ is the eigenvector corresponding to the founded eigenvalue. Then for every other eigenvector $b$ we have that $a^T b = 0$.\n",
+    "Which gives us: $Mb = a a^T b = 0$ for every other eigenvector its corresponded eigenvalue is zeros hence we have that $\\|a_i\\|_2^2$ is the maximal value of the matrix $M = a_i a_i^T$.Which proves part 2"
    ]
   },
   {
@@ -656,12 +656,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def SAGA(x0, grad, prox, max_iter, n, L, mu):\n",
-    "       '''\n",
+    "    '''\n",
     "    Parameters\n",
     "    ----------\n",
     "    x0: array, shape (nb_features,)\n",
@@ -1267,8 +1267,8 @@
     "\\begin{equation}\n",
     "\\left\\|x^{t+1}-x^{*}\\right\\|_{2}^{2} \\leq(1-\\gamma \\mu)^{t+1}\\left\\| x^{0}-x^{*} \\right\\|_{2}^{2}\n",
     "\\end{equation}\n",
-    "In particular, or\n",
-    "$\\gamma=\\frac{1}{L}$ the iterates enjoy a linear convergence with a rate of $\\mu / L$. \n",
+    "In particular, for\n",
+    "$\\gamma=\\frac{1}{L}$ the iterates have a linear convergence with a rate of $\\mu / L$. \n",
     "\n",
     "\n",
     "Proof: Starting from the definition of the algorithm we have that\n",
@@ -1308,7 +1308,7 @@
     "where $x^{*}$ is the optimal solution to the minimization problem.\n",
     "\n",
     "\n",
-    "Proof: From the strong convexity, we have\n",
+    "Proof: From the definition of strong convexity, we have\n",
     "\n",
     "\\begin{array}{l}\n",
     "{f\\left(x^{*}\\right)-f\\left(x_{k}\\right) \\geq\\left\\langle\\nabla f\\left(x_{k}\\right), x^{*}-x_{k}\\right\\rangle+\\frac{l}{2}\\left\\|x_{k}-x^{*}\\right\\|^{2}} \\\\\n",
@@ -1316,7 +1316,7 @@
     "\\end{array}\n",
     "\n",
     "\n",
-    "By summarizing the inequalities we get\n",
+    "By summarizing these inequalities we get\n",
     "\\begin{equation}\n",
     "\\left\\langle\\nabla f\\left(x_{k}\\right)-\\nabla f\\left(x^{*}\\right), x_{k}-x^{*}\\right\\rangle=\\left\\langle\\nabla f\\left(x_{k}\\right), x_{k}-x^{*}\\right\\rangle \\geq l\\left\\|x_{k}-x^{*}\\right\\|^{2}\n",
     "\\end{equation}\n",
@@ -1341,7 +1341,7 @@
     "\\left\\|x_{1}-x^{*}\\right\\|^{2} \\leq \\frac{\\max \\left\\{\\left\\|x_{1}-x^{*}\\right\\|^{2}, G^{2} / l^{2}\\right\\}}{1}\n",
     "\\end{equation}\n",
     "\n",
-    "Then we assume that the convergence rate holds with $k .$ Next we only need to show that it holds with $k+1 .$ Denote $L=\\max \\left\\|x_{1}-x^{*}\\right\\|^{2}, G^{2} / l^{2} .$ From the result above we have\n",
+    "and assume that the convergence rate holds with $k .$ The next step is to show that it holds for $k+1$ as well. We enote $L=\\max \\left\\|x_{1}-x^{*}\\right\\|^{2}, G^{2} / l^{2} .$ From the result above we have\n",
     "\\[\n",
     "\\begin{aligned}\n",
     "\\mathbb{E}\\left(\\left\\|x_{k+1}-x^{*}\\right\\|^{2}\\right) & \\leq\\left(1-\\frac{2}{k}\\right) \\mathbb{E}\\left(\\left\\|x_{k}-x^{*}\\right\\|^{2}\\right)+\\frac{1}{l^{2} k^{2}} G^{2} \\\\\n",
@@ -1358,9 +1358,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Proof of convergence of SAGA**\n",
+    "**Proof of convergence of SAGA version 1**\n",
     "\n",
-    "The proximal operator\n",
+    "$f(x) = \\frac{1}{n} \\sum_{i=1}^n f_i(x)$, and is assumed to be $\\mu$-strongly convex and has Lipschitz continuous gradients with constant $L$.\n",
+    "\n",
+    "Then we have that the proximal operator\n",
     "$ prox_{\\gamma}^h(y) = argmin(h(x)+\\frac{1}{2\\gamma}|x-y|^2) $\n",
     "and stepsize of $ \\gamma = \\frac{1}{2(\\mu n + L)} $ lead to\n",
     "$$ E|x^k - x^{*}|^2 \\leq (1 - \\frac{\\mu}{2(\\mu n + L)})^k ( |x^{*} - x^0|^2 + \\frac{n}{\\mu n + L} [f(x^0) - \\langle f'(x^*), x^0 - x^* \\rangle - f(x^*)] $$\n",
@@ -1375,8 +1377,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Proof of convergence of SVRG**\n",
+    "**Proof of convergence of SAGA version 2**\n",
     "\n",
+    "$f(x) = \\frac{1}{n} \\sum_{i=1}^n f_i(x)$, and is assumed to be $\\mu$-strongly convex and has Lipschitz continuous gradients with constant $L$.\n",
+    "\n",
+    "We may define a Lyapunov function as\n",
+    "\\begin{equation}\n",
+    "T^{k}:=T\\left(x^{k},\\left\\{\\phi_{i}^{k}\\right\\}_{i=1}^{n}\\right):=\\frac{1}{n} \\sum_{i} f_{i}\\left(\\phi_{i}^{k}\\right)-f\\left(x^{*}\\right)-\\frac{1}{n} \\sum_{i}\\left\\langle f_{i}^{\\prime}\\left(x^{*}\\right), \\phi_{i}^{k}-x^{*}\\right\\rangle+ c\\left\\|x^{k}-x^{*}\\right\\|^{2},\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $\\gamma=\\frac{1}{2(\\mu n+L)}, c=\\frac{1}{2 \\gamma(1-\\gamma \\mu) n},$ and $\\kappa=\\frac{1}{\\gamma \\mu}$.\n",
+    "\n",
+    "From this we obtain the result\n",
+    "\\begin{equation}\n",
+    "\\mathbb{E}\\left[T^{k+1}\\right] \\leq\\left(1-\\frac{1}{\\kappa}\\right) T^{k}.\n",
+    "\\end{equation}\n",
+    "\n",
+    "Next we note that $c\\left\\|x^{k}-x^{*}\\right\\|^{2} \\leq T^{k}$. Using this and the values of the constants we are left with \n",
+    "\\begin{equation}\n",
+    "\\mathbb{E}\\left[\\left\\|x^{k}-x^{*}\\right\\|^{2}\\right] \\leq\\left(1-\\frac{\\mu}{2(\\mu n+L)}\\right)^{k}\\left[\\left\\|x^{0}-x^{*}\\right\\|^{2}+\\frac{n}{\\mu n+L}\\left[f\\left(x^{0}\\right)-\\left\\langle f^{\\prime}\\left(x^{*}\\right), x^{0}-x^{*}\\right\\rangle- f\\left(x^{*}\\right)\\right]\\right]\n",
+    "\\end{equation}\n",
+    "The expectation is for all index $j^{k}$ up to step $k$.\n",
+    "Since the expression inside the square brackets is constant, this shows the convergence of the algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Proof of convergence of SVRG**\n",
+    "We assume $f$ to be a $\\mu$-strongly convex and $L$-smooth function.\n",
     "By setting $\\tilde{\\mu}$ as the average gradient, the following update rule is obtained:\n",
     "\n",
     "\\begin{equation}\n",
@@ -1437,7 +1467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
